working on error handling
