# server/routes/users.js
@@ -1,41 +1,37 @@
 const router = require('express').Router()
 const passport = require('passport')
-const { ensureAuthenticated } = require('./middleware/auth')
+const { ensureAuthenticated, needsGroup } = require('./middleware/auth')
 const register = require('../passport/register')
+const User = require('../models/User')
+const errors = require('../config/errors')
 
 /* GET users listing. */
-router.get('/', (req, res) => {
-	res.redirect('/users/me')
+router.get('/', ensureAuthenticated, needsGroup('admin'), (req, res) => {
+	User.find()
+		.select('-password')
+		.exec()
+		.then(users => res.json({ users }))
+		.catch(() => res.status(500).json(errors.UNKNOWN))
 })
 
 router.get('/me', ensureAuthenticated, (req, res) => {
-	if (req.user.group === 'admin') res.json({ user: req.user })
-	else if (req.user) res.json({ user: req.user })
-	else res.redirect('/users/login')
-})
-
-router.get('/login', (req, res) => {
-	res.json({ message: req.flash() })
+	// TODO: detangle this stuff
+	if (req.user.group === 'admin') return res.json({ user: req.user })
+	else if (req.user) return res.json({ user: req.user })
+	return res.status(401).json(errors.UNAUTHORIZED)
 })
 
 router.post('/login', (req, res, next) => {
 	passport.authenticate('local-login', (err, token, userData) => {
 		if (err) {
 			if (err.name === 'IncorrectCredentialsError') {
-				return res.status(400).json({
-					success: false,
-					message: err.message,
-				})
+				return res.status(400).json(errors.INCORRECT_CREDENTIALS)
 			}
 
-			return res.status(400).json({
-				success: false,
-				message: err,
-			})
+			return res.status(500).json(errors.UNKNOWN)
 		}
 
 		return res.json({
-			success: true,
 			message: 'You have successfully logged in!',
 			user: userData,
 			token,
